--- a/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
@@ -2,45 +2,23 @@ $width: 1000px;
 $padding-container: 40px;
 $padding-col: 15px;
 
-$font-size: .75rem;
+$font-size: .875rem;
+$cor-txt: #aaaaaa;
 
-$cor-txt: #3f3f40;
-$azul: #013253;
+$azul: '';
+$azul-escuro: #1f425d;
 
-
-$azul-escuro: #2f5484;
-$cinza: #eaeaea;
+$cinza: #ededed;
+$cinza-claro: #f5f5f5;
 $cinza-escuro: #3f3f40;
-$amarelo: #f79426;
-$vermelho: #b01116;
+
+$amarelo: '';
+$vermelho: #e21f2f;
+$laranja: '';
 
 
-$laranja: #fd970f;
+$borda: $cinza-escuro;
 
-
-
-$tit-claro: #6f6f6f;
-
-$azul-petroleo: #006166;
-$azul-claro: #61b0d8;
-$azul-bb: #8fc5ec;
-
-$borda: #d1d1d1;
-
-
-
-$dourado: #a4925f;
-
-$bege: #a4925f;
-$bordo: #790000;
-
-$marrom: #99552b;
-$roxo: #ffffff;
-
-$verde-limao: #b5bd00;
-$verde: #b5bd00;
-
-$cinza2: #eaeaea;
 
 $light: 300;
 $light-italic: 300i;
@@ -48,6 +26,6 @@ $regular: 400;
 $regular-italic: 300i;
 $bold: 500;
 
-$wLogo: 370px;
+$wLogo: 240px;
 
 $hSlide: 50vh;
