--- a/wp-content/themes/ultimate/assets/sass/style/_fonts.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_fonts.scss
@@ -3,3 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 $roboto: 'Roboto', sans-serif;
 $font-family: $roboto; 
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,700');
+$raleway: 'Raleway', sans-serif;
