--- a/wp-content/themes/ultimate/assets/sass/style/_header.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_header.scss
@@ -43,42 +43,69 @@
 		right: 0px;
 		height: 90px;
 	}
+}
 
-	.info-header {
-		background-color: #ffffff;
-		width: calc(100% - $wLogo);
-		height: 90px;
-		text-align: right;
-		line-height: 112px;
+.info-header {
+	background-color: #ffffff;
+	width: calc(100% - $wLogo);
+	height: 90px;
+	text-align: right;
+	line-height: 112px;
 
-		.item-info-header {
-			margin-right: 30px;
-			padding-right: 30px;
-			display: inline-block;
-			text-align: left;
-			border-right: 1px solid $cinza;
+	.item-info-header {
+		margin-right: 30px;
+		padding-right: 30px;
+		display: inline-block;
+		text-align: left;
+		border-right: 1px solid $cinza;
 
-			&:last-child {
-				border: none;
-			}
-
-			i {
-				color: $vermelho
-			}
-
-			span {
-				display: inline-block;
-			}
-
-			.title {
-				color: $cor-txt;
-			}
-
-			.subtitle {
-				display: block;
-				font-size: 1rem;
-				color: $cinza-escuro;
-			}
+		&:last-child {
+			border: none;
 		}
+
+		i {
+			color: $vermelho
+		}
+
+		span {
+			display: inline-block;
+		}
+
+		.title {
+			color: $cor-txt;
+		}
+
+		.subtitle {
+			display: block;
+			font-size: 1rem;
+			color: $cinza-escuro;
+		}
+	}
+}
+
+.main-title {
+	background-color: $cinza;
+	padding: 50px 0;
+
+	.titulo, .subtitulo {
+		
+	}
+
+	.titulo {
+		text-align: left;
+		color: $cinza-escuro;
+		font-size: 2.5rem;
+		line-height: 2.5rem;
+
+		&:before {
+			display: none;
+		}
+	}
+	.subtitulo {
+		color: $cor-txt;
+		text-align: left;
+		text-transform: none;
+		margin: 0;
+		font-size: 1rem;
 	}
 }
