--- a/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
@@ -3,9 +3,9 @@ $padding-container: 40px;
 $padding-col: 15px;
 
 $font-size: .875rem;
-$cor-txt: #aaaaaa;
+$cor-txt: #666c72;
 
-$azul: '';
+$azul: #35b1ca;
 $azul-escuro: #1f425d;
 
 $cinza: #ededed;
@@ -25,7 +25,8 @@ $light-italic: 300i;
 $regular: 400;
 $regular-italic: 300i;
 $bold: 500;
+$bold-extra: 700;
 
 $wLogo: 240px;
 
-$hSlide: 50vh;
+$hSlide: 60vh;
