--- a/wp-content/themes/ultimate/assets/sass/style/_estrutura.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_estrutura.scss
@@ -35,10 +35,15 @@ body * {
 	}
 
 	.content-txt {
-		padding: 0px 0px 30px;
-		display: block;
+		padding: 0px;
+		float: left;
+		width: 100%;
 		@include clear();
 		@include box-sizing();
+
+		p {
+			text-align: justify;
+		}
 
 		&.nossa-equipe {
 			li {
@@ -165,14 +170,14 @@ body * {
 	@include clear;
 	width: 100%;
 	overflow: hidden;
-	padding: 30px 0 50px;
+	padding: 70px 0 70px;
 
 	&.box-page {
 		min-height: 900px;
 	}
 
 	&.box-slide {
-		padding: 10px 0px;
+		padding: 0px;
 		position: relative;
 		z-index: 0;
 		background-color: #f1f2f2;
@@ -242,6 +247,8 @@ body * {
 		}
 	}
 }
+
+
 
 
 .sidebar {
