--- a/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_variaveis.scss
@@ -8,13 +8,13 @@ $cor-txt: #666c72;
 $azul: #35b1ca;
 $azul-escuro: #1f425d;
 
-$cinza: #ededed;
+$cinza: #F1F1F1;
 $cinza-claro: #f5f5f5;
 $cinza-escuro: #3f3f40;
 
 $amarelo: '';
 $vermelho: #e21f2f;
-$laranja: '';
+$laranja: #ED7304;
 
 
 $borda: $cinza-escuro;
