--- a/wp-content/themes/ultimate/assets/sass/style/page/_home.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/page/_home.scss
@@ -39,7 +39,7 @@
 	h3 {
 		&:before {
 			content: '';
-			background-color: $vermelho;
+			background-color: $laranja;
 			height: 2px;
 			width: 20%;
 			display: block;
