--- a/wp-content/themes/ultimate/assets/sass/style/_nav.scss
+++ b/wp-content/themes/ultimate/assets/sass/style/_nav.scss
@@ -38,7 +38,7 @@
 
 			&:hover {
 				i {
-					color: $vermelho;
+					color: $laranja;
 				}
 			}
 		}
@@ -77,7 +77,7 @@
 				right: -2px;
 				top: 26px;
 				border-radius: 50%;
-				background: rgba(#ffffff,0.2);
+				background: rgba(#ffffff,0.3);
 			}
 
 			&:after {
@@ -87,7 +87,7 @@
 				height: 5px;
 				left: 0;
 				bottom: -17px;
-				background-color: #e21f2f;
+				background-color: $laranja;
 				display: block;
 				margin: 0 auto;
 				@include animacao;
@@ -98,6 +98,7 @@
 			a {
 				&:after {
 					width: 100%;
+					z-index: 0;
 				}
 			}
 		}
@@ -117,13 +118,13 @@
 			background: #fff;
 			width: 240px;
 			left: 10px;
+			border-bottom: 3px solid $laranja;
 			@include animacao;
 
 			li {
 				display: block;
 				border-bottom: 1px solid $cinza;
 				line-height: 45px;
-				font-color: $cor-txt;
 				padding: 0 20px;
 
 				a {
@@ -131,7 +132,7 @@
 					font-weight: $bold;
 
 					&:hover {
-						color: $azul-escuro;
+						color: $laranja;
 					}
 				}
 
@@ -225,7 +226,7 @@
 						margin-left: 0px;
 						line-height: 30px;
 						color: #ffffff;
-						//border-bottom: 1px solid $vermelho;
+						//border-bottom: 1px solid $laranja;
 					}
 
 					&:hover {
@@ -356,7 +357,7 @@
 			@include animacao();
 
 			&:hover {
-				color: $vermelho;
+				color: $laranja;
 			}
 		}
 	}
